# pyreptasks

./: .coverage  .coveragerc  .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tests_requirements.txt
.github/workflows/: ci.yaml  pre-commit.yaml  release.yaml
config/: versioneer.py
examples/: data_formatter.ipynb  example_switch.ipynb  example_switch_v1.0.0.ipynb  example_switch_v1_0_0.ipynb  switch.ipynb
git_setups/: setup.cfg  versioneer.py
others/: MANIFEST.in
pyreptasks/: __init__.py  switch.py
src/: __init__.py  _version.py  switch.py
src/pyreptasks/: __init__.py  data_formatter.py  switch.py
tests/: test_data_formatter.py  test_switch.py  test_switch_v1_0_0.py
