[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pyreptasks"
dynamic = ["version"]
authors = [
    { name = "Tomas Senovilla Polo", email = "tspscgs@gmail.com" }
]
description="This Python library provides the user with some tools useful to automate coding of repetitive tasks"
readme = "README.md"
classifiers = ['Programming Language :: Python :: 3', 'License :: OSI Approved :: MIT License', 'Operating System :: OS Independent']
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["*"] 
exclude = [""] 
namespaces = false 

[tool.setuptools_scm]