[metadata]
name = pyreptasks
author = Tomás Senovilla Polo
author_email = tspscgs@gmail.com
license = MIT License
description=This Python library provides the user with some tools useful to automate coding of repetitive tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsenovilla/pyreptasks
classifiers = Programming Language :: Python :: 3
              License :: OSI Approved :: MIT License 
              Operating System :: OS Independent


[tool:pytest]
addopts = --doctest-modules --cov=./